# bamread

./: .gitignore  CHANGELOG.txt  README.md  pyproject.toml  read.py  setup.py
.github/workflows/: build_and_upload_wheels.yml  test_bamread.yml
bamread/: __init__.py  read.py  version.py
bamread/src/: bamread.html  bamread.pyx  bamwrite.pyx
